refactor : 비어있거나, 원소가 하나인 Set의 생성에 Collections 활용 (#54)