@@ -2,6 +2,7 @@ package gdsc.binaryho.imhere.mock;
 
 import gdsc.binaryho.imhere.core.lecture.application.port.AttendeeCacheRepository;
 import gdsc.binaryho.imhere.core.lecture.model.StudentIds;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -15,7 +16,7 @@ public class FakeAttendeeCacheRepository implements AttendeeCacheRepository {
         Set<Long> ids = data.get(studentId);
 
         if (ids == null) {
-            return Set.of();
+            return Collections.emptySet();
         }
 
         return ids;
@@ -31,10 +32,9 @@ public class FakeAttendeeCacheRepository implements AttendeeCacheRepository {
     private void putLectureId(Long studentId, Long lectureId) {
         Set<Long> result = data.get(studentId);
         if (result == null || result.isEmpty()) {
-            data.put(studentId, Set.of(lectureId));
+            data.put(studentId, Collections.singleton(lectureId));
         } else {
             result.add(lectureId);
         }
     }
-
 }
